--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,3 @@
-
-
 spring:
   cloud:
     compatibility-verifier:
@@ -32,3 +30,11 @@ spring:
     embedding:
       options:
         model: nomic-embed-text
+
+feign:
+  weather:
+    client:
+      url: http://localhost:8081/feign-demo/weather-client
+  stock:
+    client:
+      url: http://localhost:8081/feign-demo/stock-client
