--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 springdoc:
   swagger-ui:
     path: /swagger-ui/index.html
@@ -25,3 +23,9 @@ logging:
   level:
     org:
       springframework: DEBUG
+
+feign:
+  client:
+    config:
+      default:
+        loggerLevel: basic
