Tools development for llama3.1:8b

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,15 +17,15 @@ spring:
       base-url: http://127.0.0.1:11434
       chat:
         options:
-          model: openchat
+          model: llama3.1:8b
           temperature: 0.3
         answer:
           options:
-            model: openchat
+            model: llama3.1:8b
             temperature: 0.4
         deterministic:
           options:
-            model: openchat
+            model: llama3.1:8b
             temperature: 0.0
     embedding:
       options:
