--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,14 +3,21 @@ spring:
     compatibility-verifier:
       enabled: false
   application:
-    name: duke
+    name: chat-bot
   datasource:
-    url: jdbc:h2:./assistant;AUTO_SERVER=TRUE
-    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
   ai:
     ollama:
