--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,18 +1,44 @@
 spring:
+  ai:
+    openai:
+      api-key: ${SPRING_AI_OPENAI_API_KEY}
+      embedding:
+        enabled: true
+        model: text-embedding-ada-002
+      chat:
+        model: gpt-4
+    vectorstore:
+      pgvector:
+        index-type: HNSW
+        distance-type: COSINE_DISTANCE
+        dimension: 1536
+    embedding:
+      options:
+        model: nomic-embed-text
+
   cloud:
     compatibility-verifier:
       enabled: false
   application:
-    name: duke
+    name: chat-bot
   datasource:
-    url: jdbc:h2:./assistant;AUTO_SERVER=TRUE
-    driverClassName: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: update
+    show-sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
-  ai:
-    openai:
-      api-key: your-openai-api-key
-      model: gpt-4
+feign:
+  weather:
+    client:
+      url: http://localhost:8081/feign-demo/weather-client
+  stock:
+    client:
+      url: http://localhost:8081/feign-demo/stock-client
