--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>chatbot-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<spring-ai.version>1.0.0-M7</spring-ai.version>
+		<spring-ai.version>1.0.0-M6</spring-ai.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
 		<lombok.version>1.18.30</lombok.version>
 
@@ -93,6 +93,17 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-analyzers-common</artifactId>
 			<version>8.11.4</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20240303</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+			<version>${spring-ai.version}</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.pgvector/pgvector -->
 		<dependency>
