Ai Agent Patterns with Spring AI for Ollama

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -44,3 +44,7 @@ feign:
   stock:
     client:
       url: http://localhost:8081/feign-demo/stock-client
+
+Alpha:
+  host: https://www.alphavantage.co
+  api-key: ${ALPHA-API-KEY}
