--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@ spring-ai-tika-document-reader: This dependency provides the Spring AI integrati
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
-			<version>1.0.0-M6</version>
+			<version>${spring-ai.version}</version>
 		</dependency>
 
 		<dependency>
