Ai Agent Patterns with Spring AI for Ollama API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ logging:
         aop: DEBUG
         security: TRACE
         jpa: TRACE
+        ai.chat.client.advisor: DEBUG
 
 feign:
   client:
